--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
 </head>
 
 <body>
-    <img class="" src="/img/landingpage.jpg" alt="" width="100%" height="auto">
+    <img class="" src="img/landingpage.jpg" alt="" width="100%" height="auto">
 </body>
