--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
 </head>
 
 <body>
-    <img class="" src="https://kissamine.github.io/hal21_lp/img/landingpage.jpg" alt="" width="100%" height="auto">
+    <img class="" src="https://github.com/Kissamine/hal21_lp/blob/main/img/landingpage.jpg?raw=true" alt="" width="100%" height="auto">
 </body>
